tests/NormalTests/paczka1/fuzzy1/21803389.err
Error in line 1: MScRQwf A981 45,8
Error in line 2: MScRQwf A57 51,4
Error in line 4: MScRQwf A981 44,1
Error in line 9: MScRQwf A95 11,7
Error in line 12: MScRQwf S113 20,6
Error in line 19: bi3 A981 76,9
Error in line 21: RDbW7 A981 35,2
